Working .xyz Gen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,44 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "cdk-2.3.jar",
-        "/Users/jakecharron/Desktop/cdk-2.3.jar"
+        "/Users/jakecharron/Desktop/cdk-2.3.jar",
+        "openbabel.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-assimp-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-assimp-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-assimp-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-assimp.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-bgfx-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-bgfx-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-bgfx-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-bgfx.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-glfw-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-glfw-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-glfw-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-glfw.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nanovg-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nanovg-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nanovg-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nanovg.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nuklear-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nuklear-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nuklear-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-nuklear.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-openal-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-openal-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-openal-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-openal.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-opengl-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-opengl-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-opengl-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-opengl.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-par-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-par-natives-macos.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-par-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-par.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-sources.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-stb-javadoc.jar",
+        "lwjgl-release-3.2.3-custom/lwjgl-stb-natives-macos.jar"
     ]
 }
